<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.legado.app.lib.prefs.NameListPreference
        android:defaultValue="auto"
        android:key="language"
        android:title="@string/language"
        app:entries="@array/language"
        app:entryValues="@array/language_value" />

    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/main_activity"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="defaultToRead"
            android:summary="@string/ps_default_read"
            android:title="@string/pt_default_read"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.NameListPreference
            android:defaultValue="bookshelf"
            android:key="defaultHomePage"
            android:title="@string/default_home_page"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:entries="@array/default_home_page"
            app:entryValues="@array/default_home_page_value" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/other_setting"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.Preference
            android:key="defaultBookTreeUri"
            android:summary="@string/book_tree_uri_s"
            android:title="@string/book_tree_uri_t" />

        <io.legado.app.lib.prefs.Preference
            android:key="sourceEditMaxLine"
            android:title="@string/source_edit_text_max_line" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="antiAlias"
            android:summary="@string/pref_anti_alias_summary"
            android:title="@string/anti_alias" />

        <io.legado.app.lib.prefs.Preference
            android:key="bitmapCacheSize"
            android:summary="@string/bitmap_cache_size_summary"
            android:title="@string/bitmap_cache_size" />

        <io.legado.app.lib.prefs.Preference
            android:key="imageRetainNum"
            android:summary="@string/image_retain_number_summary"
            android:title="@string/image_retain_number" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="replaceEnableDefault"
            android:summary="@string/replace_enable_default_s"
            android:title="@string/replace_enable_default_t"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="mediaButtonOnExit"
            android:summary="@string/media_button_on_exit_summary"
            android:title="@string/media_button_on_exit_title"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="readAloudByMediaButton"
            android:summary="@string/read_aloud_by_media_button_summary"
            android:title="@string/read_aloud_by_media_button_title"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="ignoreAudioFocus"
            android:summary="@string/ignore_audio_focus_summary"
            android:title="@string/ignore_audio_focus_title" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="showAddToShelfAlert"
            android:summary="@string/show_add_to_shelf_alert_summary"
            android:title="@string/show_add_to_shelf_alert_title" />

<!--        <io.legado.app.lib.prefs.NameListPreference-->
<!--            android:defaultValue="default_version"-->
<!--            android:key="updateToVariant"-->
<!--            android:summary="@string/update_to_variant_summary"-->
<!--            android:title="@string/update_to_variant_title"-->
<!--            app:allowDividerAbove="false"-->
<!--            app:allowDividerBelow="false"-->
<!--            app:entries="@array/default_app_variant"-->
<!--            app:entryValues="@array/default_app_variant_value" />-->

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="showMangaUi"
            android:title="@string/show_manga_ui"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="cleanCache"
            android:summary="@string/clear_cache_summary"
            android:title="@string/clear_cache"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="shrinkDatabase"
            android:summary="@string/shrink_database_summary"
            android:title="@string/shrink_database"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="process_text"
            android:summary="@string/add_to_text_context_menu_s"
            android:title="@string/add_to_text_context_menu_t"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>


</androidx.preference.PreferenceScreen>
