<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/backup_restore"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.Preference
            android:key="backupUri"
            android:summary="@string/select_backup_path"
            android:title="@string/backup_path"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="backupContent"
            android:summary="@string/backup_content_summary"
            android:title="@string/backup_content"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="backup"
            android:summary="@string/backup_destination_summary"
            android:title="@string/backup"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="restore"
            android:summary="@string/restore_summary"
            android:title="@string/restore"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="restoreIgnore"
            android:summary="@string/restore_ignore_summary"
            android:title="@string/restore_ignore"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="onlyLatestBackup"
            android:summary="@string/only_latest_backup_s"
            android:title="@string/only_latest_backup_t"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="autoBackup"
            android:title="@string/auto_backup_t"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

</androidx.preference.PreferenceScreen>
